--- a/style.css
+++ b/style.css
@@ -286,6 +286,7 @@ section .title::after{
     cursor: pointer;
     transition: all 0.3s ease;
 }
+
 .services .serv-content .card:hover{
     background: crimson;
 }
@@ -438,8 +439,10 @@ section .title::after{
 .teams .carousel .card:hover i{
     display: block;
    
-    padding-top: 80px;	
-	padding-right: 140px;
+    margin-top: auto;	
+    margin-right: auto;
+    width:100%;
+    padding-top: 20%;
     position: absolute;
     font-size: 35px;
 	right: 0;
